Spoiler-free mode

--- a/FangameReader/FangameReader.vcxproj
+++ b/FangameReader/FangameReader.vcxproj
@@ -47,6 +47,7 @@
     <ClCompile Include="FangameInputHandler.cpp" />
     <ClCompile Include="FangamePeekerState.cpp" />
     <ClCompile Include="FangameVisualizer.cpp" />
+    <ClCompile Include="FileBroadcaster.cpp" />
     <ClCompile Include="FooterIconPanel.cpp" />
     <ClCompile Include="GdiFont.cpp" />
     <ClCompile Include="GdiGradientRect.cpp" />
@@ -92,6 +93,7 @@
     <ClCompile Include="SessionMonitor.cpp" />
     <ClCompile Include="SettingsDialogFrame.cpp" />
     <ClCompile Include="SolidBrush.cpp" />
+    <ClCompile Include="StringBroadcaster.cpp" />
     <ClCompile Include="TableLayout.cpp" />
     <ClCompile Include="TextColumnContent.cpp" />
     <ClCompile Include="TimeProgressReporter.cpp" />
@@ -128,6 +130,7 @@
     <ClInclude Include="BaseFileValueGetter.h" />
     <ClInclude Include="BossSettingsDialog.h" />
     <ClInclude Include="BossTriggerCreater.h" />
+    <ClInclude Include="Broadcaster.h" />
     <ClInclude Include="ChangingFileCache.h" />
     <ClInclude Include="ChildSettingsDialog.h" />
     <ClInclude Include="ColorSettingsDialog.h" />
@@ -139,6 +142,7 @@
     <ClInclude Include="FangameInputHandler.h" />
     <ClInclude Include="FangamePeekerState.h" />
     <ClInclude Include="FangameVisualizer.h" />
+    <ClInclude Include="FileBroadcaster.h" />
     <ClInclude Include="FooterIconPanel.h" />
     <ClInclude Include="GeneralSettingsDialog.h" />
     <ClInclude Include="HotkeySettingsDialog.h" />
@@ -153,6 +157,7 @@
     <ClInclude Include="SessionMonitor.h" />
     <ClInclude Include="SettingsDialogFrame.h" />
     <ClInclude Include="SolidBrush.h" />
+    <ClInclude Include="StringBroadcaster.h" />
     <ClInclude Include="UpdateInstaller.h" />
     <ClInclude Include="UserActionController.h" />
     <ClInclude Include="UserAliasFile.h" />
@@ -261,8 +266,10 @@
     <Xml Include="FangameResources\FangameInfo\Cosmo\layout.xml" />
     <Xml Include="FangameResources\FangameInfo\I wanna appreciate meteor stream\layout.xml" />
     <Xml Include="FangameResources\FangameInfo\i wanna be the contrary\layout.xml" />
+    <Xml Include="FangameResources\FangameInfo\I wanna be the Fish\layout.xml" />
     <Xml Include="FangameResources\FangameInfo\I wanna be the Snow Drive\layout.xml" />
     <Xml Include="FangameResources\FangameInfo\I Wanna Break The Series Z\layout.xml" />
+    <Xml Include="FangameResources\FangameInfo\I wanna break Things into Pieces\layout.xml" />
     <Xml Include="FangameResources\FangameInfo\I wanna buy the crayon\layout.xml" />
     <Xml Include="FangameResources\FangameInfo\I wanna bye the bye\layout.xml" />
     <Xml Include="FangameResources\FangameInfo\I wanna bye the Entrance\layout.xml" />
